--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Anne-Sophie Sevens
 email: annesophie_sevens@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Created by Benoît Sevens
-baseurl: "/new" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.annesophiesevens.com" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 # github_username:  jekyll
