--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Anne-Sophie Sevens
-email: annesophie_sevens@hotmail.com
+email: contact@annesophiesevens.com
 description: > # this means to ignore newlines until "baseurl:"
   Created by Benoît Sevens
 baseurl: "" # the subpath of your site, e.g. /blog
