Add social media links

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.annesophiesevens.com" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 # github_username:  jekyll
+youtube_channel: "Turiya89"
+facebook_page: "BelgianSoprano"
+instagram_page: "ansodramsoprano"
 
 # Build settings
 markdown: kramdown
