--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ url: "http://www.annesophiesevens.com" # the base hostname & protocol for your s
 # github_username:  jekyll
 youtube_channel: "Turiya89"
 facebook_page: "BelgianSoprano"
-instagram_page: "ansodramsoprano"
+instagram_page: "annesophiesevens"
 
 # Build settings
 markdown: kramdown
