--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ t:
     video:
       name: "Video"
       url: "/video-en.html"
-    project:
-      name: "Project"
-      url: "/project-en.html"
+    anka:
+      name: "Anka"
+      url: "/anka-en.html"
     agenda:
       name: "Agenda"
       url: "/agenda-en.html"
@@ -63,9 +63,9 @@ t:
     video:
       name: "Vidéos"
       url: "/video-fr.html"
-    project:
-      name: "Projet"
-      url: "/project-fr.html"
+    anka:
+      name: "Anka"
+      url: "/anka-fr.html"
     agenda:
       name: "Agenda"
       url: "/agenda-fr.html"
@@ -85,9 +85,9 @@ t:
     video:
       name: "Video"
       url: "/video-de.html"
-    project:
-      name: "Projekt"
-      url: "/project-de.html"
+    anka:
+      name: "Anka"
+      url: "/anka-de.html"
     agenda:
       name: "Agenda"
       url: "/agenda-de.html"
@@ -107,9 +107,9 @@ t:
     video:
       name: "Video"
       url: "/video-nl.html"
-    project:
-      name: "Project"
-      url: "/project-nl.html"
+    anka:
+      name: "Anka"
+      url: "/anka-nl.html"
     agenda:
       name: "Agenda"
       url: "/agenda-nl.html"
